# moos-ivp-agent

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build.sh  docker.sh  refresh_xquartz.sh  test.sh
.github/actions/build-cpp/: action.yml
.github/actions/build-moos-ivp/: action.yml
.github/workflows/: build-moos-ivp-agent.yml  cpp-workflow.yml  docker-workflow.yml  py3-workflow.yml
examples/: README.md
examples/BridgeExample/: README.md
examples/BridgeExample/mission/: plug_pShare.moos
examples/BridgeExample/mission/m200/: launch_m200.sh  meta_m200.bhv  plug_pMarinePID.moos  plug_uXMS.moos
examples/BridgeExample/model/: keyboard_controller.py
examples/BridgeExample/model/util/: getch.py
examples/DiscreteField/: README.md  run.py  run.sh  runner.py
examples/DiscreteField/mission/: README  plug_pHostInfo.moos
examples/DiscreteField/mission/m200/: debug.sh  launch_m200.sh  meta_m200.bhv  meta_m200.moos  plug_pLogger.moos  plug_uXMS.moos
examples/DiscreteField/mission/shoreside/: launch_shoreside.sh  meta_shoreside.moos
examples/ManagerExample/: README.md  run.sh
examples/ManagerExample/mission_alder/: alder.bhv  alder.moos  launch.sh
examples/ManagerExample/model/: model.py
examples/QTable/: README.md  run.py  run.sh  train.py  train.sh
examples/QTable/mission/: clean.sh  launch_pair.sh
examples/QTable/mission/heron/: launch_heron.sh  meta_heron.bhv  meta_heron.moos  plug_pEpisodeManager.moos
examples/QTable/mission/m200/: meta_m200.bhv  plug_pHelmIvP.moos
examples/QTable/mission/shoreside/: meta_shoreside.moos
examples/QTable/model/: constants.py  model.py  new_runner.py  runner.py  tester.py  trainer.py  wandb_key.py
examples/QTable/model/util/: constants.py
examples/QTable/scripts/: gui_launch.sh  launch_gui.sh  launch_sim.sh  sim_launch.sh
examples/QTable/trained/1628500096/: 1628500544.npy  1628500992.npy  1628501444.npy  1628501888.npy  1628502336.npy  1628502792.npy  1628503234.npy  1628503682.npy  1628504123.npy  1628504570.npy  (+41 more)
examples/WORK_IN_PROGRESS/pLearn2/: test.sh
examples/pLearn/: README.md  run.sh
examples/pLearn/mission/: launch_full.sh
examples/pLearn/model/: model.py  reinforce.py  run.py  state.py  test.py
examples/pLearn2/: test.sh
examples/pLearn2/mission/: clean.sh
examples/pLearn2/model/: tester.py
examples/pLearn2/scripts/: sim_launch.sh
missions/1v1-Attacking/: plug_uFldNodeBroker.moos
missions/1v1-Attacking/m200/: launch_m200.sh  meta_m200.bhv  meta_m200.moos  plug_pEpisodeManager.moos  plug_pHelmIvP.moos  plug_uFldNodeBroker.moos  plug_uXMS.moos
missions/1v1-Attacking/shoreside/: meta_shoreside.moos
missions/AgentAquaticus/: clean.sh  launch_demo.sh  launch_pair.sh  plug_pNodeReporter.moos
missions/AgentAquaticus/heron/: launch_heron.sh  meta_heron.bhv  meta_heron.moos  plug_pBasicContactMgr.moos  plug_pEpisodeManager.moos  plug_pHelmIvP.moos  plug_pLogger.moos
missions/AgentAquaticus/shoreside/: clean.sh  launch_shoreside.sh  meta_shoreside.moos
missions/Pursuit/: launch.sh
missions/Pursuit/common/: plug_origin_warp.moos  plug_pShare.moos
missions/Pursuit/shoreside/: launch_shoreside.sh  meta_shoreside.moos
missions/Pursuit/vehicle/: launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_pEpisodeManager.moos  plug_pHelmIvP.moos  plug_pMarinePID.moos
src/: CMakeLists.txt
src/lib_behaviors-RLquaticus/: BHV_Agent.cpp  BHV_Agent.h  PyInterface.cpp  PyInterface.h
src/lib_behaviors-agent/: BHV_Agent.cpp  BHV_Agent.h  CMakeLists.txt  PyInterface.cpp  PyInterface.h
src/lib_mivp-test/: CMakeLists.txt  MockCMOOSApp.cpp  MockCMOOSApp.h  MockMOOSCastingApp.cpp  MockMOOSCastingApp.h  mivptest.h
src/pEpisodeManager/: CMakeLists.txt  EpisodeManager.cpp  EpisodeManager.h  EpisodeManager_Info.cpp  EpisodeManager_Info.h  EpisodeManager_test.cpp  main.cpp  pEpisodeManager.moos
src/python_module/: setup.cfg  tox.ini
src/python_module/RLquaticus/: bridge.py
src/python_module/RLquaticus/util/: data_structures.py  display.py  parse.py
src/python_module/mivp_agent/: bridge.py  const.py  manager.py  messages.py
src/python_module/mivp_agent/aquaticus/: const.py  field.py
src/python_module/mivp_agent/logger/: glog.py  inspect.py
src/python_module/mivp_agent/proto/: agent_state.proto  agent_state_pb2.py  aquaticus_vehicle.proto  aquaticus_vehicle_pb2.py  mivp_agent.proto  mivp_agent_pb2.py  moos_pb2.py  node_report.proto  node_report_pb2.py  proto_logger.py  translate.py
src/python_module/mivp_agent/util/: display.py  file_system.py  packit.py  parse.py
src/python_module/scripts/: agent_cli.py  agnt  dummy_server.py
src/python_module/src/mivp_agent/: bridge.py  const.py  episodic_manager.py  manager.py  messages.py
src/python_module/src/mivp_agent/aquaticus/: field.py
src/python_module/src/mivp_agent/cli/: info.py  log.py  main.py  util.py
src/python_module/src/mivp_agent/cli/inspect/: consumers.py  inspector.py  tdist.py
src/python_module/src/mivp_agent/cli/inspect/graphers/: flagdist.py  mindist.py  tdist.py
src/python_module/src/mivp_agent/log/: const.py  consumer.py  directory.py  metadata.py
src/python_module/src/mivp_agent/logger/: inspect.py
src/python_module/src/mivp_agent/proto/: compile.sh  mivp_agent.proto  mivp_agent_pb2.py  moos.proto  proto_logger.py  translate.py
src/python_module/src/mivp_agent/util/: agent_cli.py  file_system.py  math.py  validate.py
src/python_module/test/: test_all.py  test_bridge.py  test_consumer.py  test_data_structures.py  test_episodic_manager.py  test_file_system.py  test_log.py  test_manager.py  test_packit.py  test_proto.py
src/python_module/test/.generated/: README.txt
src/uFldFlagManagerAgent/: CMakeLists.txt  FlagManager.cpp  FlagManager.h  FlagManager_Info.cpp  FlagManager_Info.h  main.cpp  notes.txt  uFldFlagMgr.moos
src/uFldTagManagerAgent/: CMakeLists.txt  TagManager.cpp  TagManager.h  TagManager_Info.cpp  TagManager_Info.h  VTag.cpp  VTag.h  main.cpp  uFldTagMgr.moos
test/: CMakeLists.txt  test_environment.sh
test/cpp/: PyInterface_test.cpp
(+1168 files in other folders)
