[metadata]
name = mivp-agent
version = 0.0.1
author = Carter Fendley
description = Python ML tooling for the MOOS-IvP environment
url = https://mivp-agent.github.io/
license = MIT
platforms = any 
project_urls =
    Bug Tracker = https://github.com/mivp-agent/moos-ivp-agent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
    protobuf >=3.17.0, <=3.20.0
    tqdm
    plotly
    numpy
    matplotlib
packages = find:
scripts = 
  scripts/agnt
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
test = timeout-decorator
